<resources>
    <string name="app_name">Real Estate Broker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_upp">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="log_in">Log in</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_app_name">Welcome to *App name*</string>
    <string name="reset_passpwrd">Reset Passpwrd</string>
    <string name="register" />
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_paaword">Confirm Paaword</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
</resources>